# Tweetle_dojo

./: .dockerignore  .tool-versions  Dockerfile.server  Scarb.toml  deploy-sepolia.sh  dojo_dev.toml  dojo_sepolia.toml  manifest_dev.json
circuits/tweetle_wordle/: Nargo.toml  Prover.toml
circuits/tweetle_wordle/src/: main.nr
client/: .gitignore  App.tsx  app.json  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
client/modules/controller/: Controller.podspec  package.json
client/modules/controller/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
client/modules/controller/android/src/main/java/com/cartridge/controller/: ControllerModule.kt  ControllerPackage.kt  NativeControllerSpec.kt
client/src/: fonts.ts  theme.ts
client/src/components/: TabBar.tsx
client/src/constants/: index.ts
client/src/dojo/: DojoContext.tsx  apollo.ts  contracts.gen.ts  dojoConfig.ts  manifest_dev.json  manifest_sepolia.json  models.ts  torii.ts  useDojo.ts
client/src/hooks/: SessionContext.tsx  useGameActions.ts  usePlayer.ts  (+1 more)
contracts/: Scarb.toml  dojo_dev.toml  dojo_sepolia.toml  manifest_dev.json  torii_sepolia.toml
contracts/src/: lib.cairo
server/data/: tournaments.db-shm  tournaments.db-wal
server/src/: circuit.ts  index.ts
src/: lib.cairo  models.cairo
src/models/: attempt.cairo  daily_game.cairo  game.cairo  game_stats.cairo  player.cairo
src/systems/: actions.cairo  daily_game.cairo  player_system.cairo  word.cairo
src/tests/: test_daily_game.cairo  test_game.cairo  test_player_system.cairo  test_world.cairo
web/src/: App.tsx
(+35 files in other folders)
